# controllers/person.go
@@ -25,48 +25,10 @@ type Options struct {
 // @Accept       json
 // @Produce      json
 // @Success      200 {object} QuesInf
-// @Router       /person_questions [get]
+// @Router       /person-questions [get]
 func GetPersonQues(c *gin.Context) {
 
 	file, err := os.Open("./data/person.json")
-	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{
-			"status":  "error",
-			"message": "Error opening file",
-		})
-		return
-	}
-	byteFile, err := io.ReadAll(file)
-	if err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{
-			"status":  "error",
-			"message": "Error reading file",
-		})
-		return
-	}
-	ques := make(map[string]interface{})
-	if err := json.Unmarshal(byteFile, &ques); err != nil {
-		c.JSON(http.StatusBadRequest, gin.H{
-			"status":  "error",
-			"eror":    err,
-			"message": "Something went worong.",
-		})
-		return
-	}
-
-	c.JSON(http.StatusOK, ques)
-
-}
-
-// @Description  Şirket test kısmı
-// @Tags         Test
-// @Accept       json
-// @Produce      json
-// @Success      200 {object} QuesInf
-// @Router       /company_questions [get]
-func GetCompanyQues(c *gin.Context) {
-
-	file, err := os.Open("./data/company2.json")
 	if err != nil {
 		c.JSON(http.StatusBadRequest, gin.H{
 			"status":  "error",
