# docs/swagger.json
@@ -6,6 +6,68 @@
     },
     "host": "https://karbonizgi.leaflove.com.tr",
     "paths": {
+        "/add-suggest": {
+            "post": {
+                "description": "Aksiyon Ekleme Kısmı",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Action"
+                ],
+                "summary": "Kullanıcı aksiyon ekleme",
+                "parameters": [
+                    {
+                        "description": "status değeri için sadece 'planned,in_progress,completed,cancelled' değerlerden biri gönderilmelidir. ",
+                        "name": "Suggest",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/controllers.Suggest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "success",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.Response"
+                        }
+                    },
+                    "400": {
+                        "description": "Invalid request",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.Response"
+                        }
+                    }
+                }
+            }
+        },
+        "/cal-info": {
+            "get": {
+                "description": "Hesaplama yöntemi bilgilendirme kısmı",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Data"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Hesaplama için bilgiler yer alır.Sections kısmında yazı yer alır. type 'paragraph' ise content içerisinde yazı bulunur. Eğer type 'list' ise items içerisinde content olarak yazılar yer alır.",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.CallDataResp"
+                        }
+                    }
+                }
+            }
+        },
         "/chat": {
             "post": {
                 "description": "Chat Kısmı",
@@ -21,7 +83,7 @@
                 "summary": "User chat Kısmı",
                 "parameters": [
                     {
-                        "description": "Kullanıcının user id bilgisini ve ilk başta score bilgisini girmelisin.Score bilgisi /score endpointinde data kısmında dönüyor.Eğer kullanıcı konuşmayı devam ettirirse message kısmında kullanıcının mesajını gönderebilirsin.",
+                        "description": "Kullanıcının user id bilgisini ve ilk başta score bilgisini girmelisin.Score bilgisi /score endpointinde data kısmında dönüyor.Eğer kullanıcı konuşmayı devam ettirirse message kısmında kullanıcının mesajını gönderebilirsin. Filter kısmında main ya da detail ifadelerini göndermelisin. main için key kısmını girmene gerek yok ama detail kısmında key kısmına alt başlığın key bilgisini, score kısmına da alt başlıkta aldığı skoru göndermelisin.",
                         "name": "PersonInf",
                         "in": "body",
                         "required": true,
@@ -46,7 +108,41 @@
                 }
             }
         },
-        "/company_questions": {
+        "/comments": {
+            "get": {
+                "description": "Kullanıcı soru-cevap kısmı",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Data"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "person ya da company ifadesi girilir.",
+                        "name": "user_type",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Kullanıcı eleştiri soru cevap kısımları bulunur.",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/controllers.Comment"
+                            }
+                        }
+                    }
+                }
+            }
+        },
+        "/company-questions": {
             "get": {
                 "description": "Şirket test kısmı",
                 "consumes": [
@@ -63,6 +159,50 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/controllers.QuesInf"
+                        }
+                    }
+                }
+            }
+        },
+        "/data": {
+            "get": {
+                "description": "Genel bilgilendirme kısmı",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Data"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Anasayfa için güncel bilgiler yer alır. Rastgele üç veri bulunur.Sections kısmında yazılar yer alır. type 'paragraph' ise content içerisinde yazı bulunur. Eğer type 'list' ise items içerisinde title ve content olarak yazılar yer alır.",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.DataResp"
+                        }
+                    }
+                }
+            }
+        },
+        "/detail-score": {
+            "get": {
+                "description": "Detay skor bilgileri",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Score"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Kullanıcıya ait soru alt başlıklarına göre questiontype:temel soru başlığını ,QuestionSubType : alt soru başlığını ve SubScore ise alt başlığa ait değeri içerir.Bu kısımlar chat kısmı için kullanılır.",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.DetailResp"
                         }
                     }
                 }
@@ -136,7 +276,7 @@
                 }
             }
         },
-        "/person_questions": {
+        "/person-questions": {
             "get": {
                 "description": "Bireysel test kısmı",
                 "consumes": [
@@ -213,7 +353,7 @@
                 "summary": "User Puan Kısmı",
                 "parameters": [
                     {
-                        "description": "/company-questions ve /person-questions endpointlerinde belli bir key value değerine göre soruları döndüm. Bu değerleri kullanarak question_name ve question_key değerlerini ekleyebilirsin.",
+                        "description": "/company-questions ve /person-questions endpointlerinde belli bir key value değerleri bulunamktadır. Bu değerleri kullanarak question_name ve question_key değerleri eklenir.",
                         "name": "ScoreInfo",
                         "in": "body",
                         "required": true,
@@ -237,9 +377,258 @@
                     }
                 }
             }
+        },
+        "/score-info": {
+            "get": {
+                "description": "Kullanıcı skor bilgileri",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Score"
+                ],
+                "summary": "Kullanıcı skor bilgileri",
+                "responses": {
+                    "200": {
+                        "description": "Kullanıcıya ait skor puanını ve skor tarihini geri döndürür.",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.DataScore"
+                        }
+                    }
+                }
+            }
+        },
+        "/suggested": {
+            "get": {
+                "description": "Örnek aksiyonlar",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Data"
+                ],
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "person ya da company ifadesi girilir.",
+                        "name": "user_type",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Kullanıcıya aksiyon önerileri için kullanılır.s",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.SuggestResp"
+                        }
+                    }
+                }
+            }
+        },
+        "/user": {
+            "get": {
+                "description": "Kullanıcı bilgileri kısmı",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "User"
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.UserInfo"
+                        }
+                    }
+                }
+            }
+        },
+        "/user-suggest": {
+            "get": {
+                "description": "Kullanıcı Aksiyon Kayıtları",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Action"
+                ],
+                "summary": "Kullanıcı aksiyon",
+                "responses": {
+                    "200": {
+                        "description": "success",
+                        "schema": {
+                            "$ref": "#/definitions/controllers.UserSug"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
+        "controllers.AllScores": {
+            "type": "object",
+            "properties": {
+                "score": {
+                    "type": "number"
+                },
+                "score_date": {
+                    "type": "string"
+                }
+            }
+        },
+        "controllers.CalData": {
+            "type": "object",
+            "properties": {
+                "sections": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/controllers.CalSection"
+                    }
+                },
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
+        "controllers.CalItem": {
+            "type": "object",
+            "properties": {
+                "content": {
+                    "type": "string"
+                }
+            }
+        },
+        "controllers.CalSection": {
+            "type": "object",
+            "properties": {
+                "content": {
+                    "type": "string"
+                },
+                "items": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/controllers.CalItem"
+                    }
+                },
+                "subtitle": {
+                    "type": "string"
+                },
+                "type": {
+                    "type": "string"
+                }
+            }
+        },
+        "controllers.CallDataResp": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/controllers.CalData"
+                }
+            }
+        },
+        "controllers.Comment": {
+            "type": "object",
+            "properties": {
+                "answer": {
+                    "type": "string"
+                },
+                "question": {
+                    "type": "string"
+                }
+            }
+        },
+        "controllers.Data": {
+            "type": "object",
+            "properties": {
+                "image": {
+                    "type": "string"
+                },
+                "sections": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/controllers.Section"
+                    }
+                },
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
+        "controllers.DataResp": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/controllers.Data"
+                    }
+                }
+            }
+        },
+        "controllers.DataScore": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/controllers.AllScores"
+                    }
+                },
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
+        "controllers.DetailResp": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/controllers.DetailScore"
+                    }
+                }
+            }
+        },
+        "controllers.DetailScore": {
+            "type": "object",
+            "properties": {
+                "questionSubType": {
+                    "type": "string"
+                },
+                "questionType": {
+                    "type": "string"
+                },
+                "subScore": {
+                    "type": "number"
+                }
+            }
+        },
+        "controllers.Item": {
+            "type": "object",
+            "properties": {
+                "content": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
+                }
+            }
+        },
         "controllers.Options": {
             "type": "object",
             "properties": {
@@ -254,6 +643,12 @@
         "controllers.PersonInf": {
             "type": "object",
             "properties": {
+                "filter": {
+                    "type": "string"
+                },
+                "key": {
+                    "type": "string"
+                },
                 "message": {
                     "type": "string"
                 },
@@ -283,7 +678,7 @@
             "type": "object",
             "properties": {
                 "score": {
-                    "type": "integer"
+                    "type": "number"
                 },
                 "sub_key": {
                     "type": "string"
@@ -314,6 +709,92 @@
                     }
                 },
                 "question_name": {
+                    "type": "string"
+                }
+            }
+        },
+        "controllers.Section": {
+            "type": "object",
+            "properties": {
+                "content": {
+                    "type": "string"
+                },
+                "items": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/controllers.Item"
+                    }
+                },
+                "subtitle": {
+                    "type": "string"
+                },
+                "type": {
+                    "description": "-paragraph ve list olarak ayrılır. list ise item kısmı paragraph ise content kısmı doldurulur.",
+                    "type": "string"
+                }
+            }
+        },
+        "controllers.Suggest": {
+            "type": "object",
+            "properties": {
+                "action": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
+        "controllers.SuggestIds": {
+            "type": "object",
+            "properties": {
+                "action": {
+                    "type": "string"
+                },
+                "action_id": {
+                    "type": "integer"
+                },
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
+        "controllers.SuggestResp": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "status": {
+                    "type": "string"
+                }
+            }
+        },
+        "controllers.UserInfo": {
+            "type": "object",
+            "properties": {
+                "companyName": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "firstname": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "lastname": {
+                    "type": "string"
+                },
+                "userType": {
+                    "type": "string"
+                },
+                "username": {
                     "type": "string"
                 }
             }
@@ -351,6 +832,20 @@
                     "type": "string"
                 },
                 "user_type": {
+                    "type": "string"
+                }
+            }
+        },
+        "controllers.UserSug": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/controllers.SuggestIds"
+                    }
+                },
+                "status": {
                     "type": "string"
                 }
             }
